--- a/styles.css
+++ b/styles.css
@@ -50,8 +50,8 @@ main {
 
 .player img {
     width: 100%;
-    max-width: 400px;
-    border-radius: 10px;
+    
+    
     margin: 10px 0;
 }
 
@@ -74,7 +74,7 @@ footer {
     max-width: 100%;
    background-color: rgb(235, 234, 234);
     margin: 0px 90px 80px 80px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.089);    
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.302);    
 }
 
 
@@ -96,4 +96,45 @@ footer {
 span{
     color: #000000;
     font-weight: bold;
+}
+
+
+a{
+    color: #0066b2;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+/* Media query para pantallas pequeñas */
+@media (max-width: 768px) {
+    .player {
+        margin: 10px;
+        padding: 10px;
+    }
+
+    .player img {
+        width: 90%;
+        display: block;
+        margin: 10px auto;
+    }
+
+    .player p {
+        font-size: 14px;
+    }
+
+    .texte_encabezado {
+        margin: 10px;
+    }
+
+    .linea_roja {
+        margin: 10px;
+    }
+
+    .container {
+        margin: 10px;
+        padding: 10px;
+    }
 }
